tdf#39894: Metafile: use distance from last char cell to next

The optional Dx array of WMF's META_EXTTEXTOUT (and its EMF
counterpart) define not only spacing between char cells of this
record, but also of spacing to first char cell of next text
(if TA_UPDATECP is set). Additionally, both WMF and EMF EXTTEXTOUT
records define not only X spacing, but also Y (if ETO_PDY is set
in its options).

Unit test is included.

Change-Id: I45ed872210c81b3050ba65d68145b64861bfec22
Reviewed-on: https://gerrit.libreoffice.org/32436
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>